# engeto_election_scraper_solution

./: README.md  cli.py  main.py  pyproject.toml  requirements.txt  test_main.py
